# microbit-snake

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
.zed/: debug.json  settings.json
src/: main.rs
