[package]
name = "microbit-snake"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.2"
microbit-v2 = "0.16.0"
embedded-hal = "1.0.0"
heapless = "0.9.3"

[dependencies.cortex-m]
version = "0.7.7"
features = ["inline-asm", "critical-section-single-core"]


[profile.release]
codegen-units = 1
debug = true
lto = true
