[package]
name = "microbit-snake"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }
microbit-v2 = "0.16.0"
embedded-hal = "1.0.0"
heapless = "0.9.3"

[dependencies.rand_pcg]
default-features = false
version = "0.10.2"

[dependencies.rand]
default-features = false
version = "0.10.2"

[dependencies.cortex-m]
version = "0.7.7"
features = ["inline-asm", "critical-section-single-core"]


[profile.release]
codegen-units = 1
debug = true
lto = true
